--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Calvin Osinga<\title>
+  <\head>
+  <body>
+    <h1>About Me<\h1>
+    <p>Some description of me.<\p>
+  <\body>
+<\html>
