--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Calvin Osinga<\title>
-  <\head>
-  <body>
-    <h1>About Me<\h1>
-    <p>Some description of me.<\p>
-  <\body>
-<\html>
+
+<head>
+    <title>Calvin Osinga</title>
+</head>
+  
+<body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">Research</a>
+        <a href="#contact">Code</a>
+        <a href="#about">About Me</a>
+    </div> 
+    <h1>Calvin Osinga</h1>
+    <p>PhD Student at the University of Maryland College Park.</p>
+</body>
+
+</html>
