--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html>
 
 <head>
-    <link rel='stylesheet' href="mystyle.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato:200,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
     <title>Calvin Osinga</title>
     
+    <style>
+      body {
+      background-color: black;
+      }
+
+      h1 {
+      font-family: 'Lato', sans-serif;
+      font-size:28;
+      font-weight:200;
+      color: lightseagreen;
+      }
+
+      p {
+      font-family: 'Montserrat', sans-serif;
+      font-size:12;
+      font-weight:750;
+      color:linen;
+      }
+      
+    </style>
 </head>
   
 <body>
