--- a/index.html
+++ b/index.html
@@ -4,28 +4,8 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Lato:200,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+    <link href="pref.css" rel="stylesheet">
     <title>Calvin Osinga</title>
-    
-    <style>
-      body {
-      background-color: black;
-      }
-
-      h1 {
-      font-family: 'Lato', sans-serif;
-      font-size:28;
-      font-weight:200;
-      color: lightseagreen;
-      }
-
-      p {
-      font-family: 'Montserrat', sans-serif;
-      font-size:12;
-      font-weight:750;
-      color:linen;
-      }
-      
-    </style>
 </head>
   
 <body>
@@ -36,7 +16,7 @@
         <a href="#about">About Me</a>
     </div> 
     <h1>Calvin Osinga</h1>
-    <p>PhD Student at the University of Maryland College Park.</p>
+    <h2>Graduate Student at the University of Maryland College Park</h2>
 </body>
 
 </html>
