--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   
 <body>
-    <div class="topnav">
+    <div class="topnav-centered">
         <a class="active" href="#home">Home</a>
         <a href="#news">Research</a>
         <a href="#contact">Code</a>
