--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
   
 <body>
     <div class="topnav-centered">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">Research</a>
-        <a href="#contact">Code</a>
-        <a href="#about">About Me</a>
+    	<a class="active" href="index.html">Home</a>
+		<div class="dropdown">
+			<button class="dropbtn">Research
+				<i class="fa fa-caret-down"></i>
+			</button>
+		<div class="dropdown-content">
+			<a href="research/interests/page.html">Interests</a>
+			<a href="research/papers/page.html">Papers</a>
+		</div>
+        <a href="code/page.html">Code</a>
+        <a href="about/page.html">About Me</a>
     </div> 
     <h1>Calvin Osinga</h1>
     <h2>Graduate Student at the University of Maryland College Park</h2>
+	<p>A brief summary of what's on the website.</p>
+	
 </body>
 
 </html>
