--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   
 <body>
-    <div class="topnav-centered">
+    <div class="topnav">
     	<a class="active" href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Research
@@ -23,8 +23,9 @@
         <a href="about/page.html">About Me</a>
     </div> 
     <h1>Calvin Osinga</h1>
-    <h2>Graduate Student at the University of Maryland College Park</h2>
-	<p>A brief summary of what's on the website.</p>
+    <h2>Ph. D. Student</h2>
+	<p>Hi! I'm currently a third-year graduate student at the
+		Astronomy Department at UMD.</p>
 	
 </body>
 
