forgot to close environment

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 			<button class="dropbtn">Research
 				<i class="fa fa-caret-down"></i>
 			</button>
-		<div class="dropdown-content">
-			<a href="research/interests/page.html">Interests</a>
-			<a href="research/papers/page.html">Papers</a>
+			<div class="dropdown-content">
+				<a href="research/interests/page.html">Interests</a>
+				<a href="research/papers/page.html">Papers</a>
+			</div>
 		</div>
         <a href="code/page.html">Code</a>
         <a href="about/page.html">About Me</a>
