trying button links instead of navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
   
 <body>
-    <div class="topnav">
+
+    <h1>Calvin Osinga</h1>
+    <h2>Ph. D. Student</h2>
+	<p>Hi! I'm currently a third-year graduate student at the
+		Astronomy Department at UMD.</p>
+	
+	<!-- RESEARCH LINKS -->
+	<h1>Research</h1>
+	<a href="research/page.html">
+		<div class="container">
+			<img src="color_compare.png" alt="Clustering in Simulation" opacity=0.5>
+			<div class="center">Preparing to Map the Structure of the Universe</div>
+		</div>
+	</a>
+</body>
+
+</html>
+
+<!--    
+TOPNAV REMOVED
+<div class="topnav">
     	<a class="active" href="index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">Research
@@ -22,12 +42,4 @@
 		</div>
         <a href="code/page.html">Code</a>
         <a href="about/page.html">About Me</a>
-    </div> 
-    <h1>Calvin Osinga</h1>
-    <h2>Ph. D. Student</h2>
-	<p>Hi! I'm currently a third-year graduate student at the
-		Astronomy Department at UMD.</p>
-	
-</body>
-
-</html>
+    </div> -->
