Fixed image link

--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
 	<p>Hi! I'm currently a third-year graduate student at the
 		Astronomy Department at UMD.</p>
 	
-	<!-- RESEARCH LINKS -->
 	<h1>Research</h1>
 	<a href="research/page.html">
 		<div class="container">
-			<img src="color_compare.png" alt="Clustering in Simulation" opacity=0.5>
+			<img src="colorcompare.png" alt="Clustering in Simulation" opacity=0.5>
 			<div class="center">Preparing to Map the Structure of the Universe</div>
 		</div>
 	</a>
+	
+	<h1>Code</h1>
+	<!--
+	<a href="code/page.html">
+		<div class="container">
+			GET IMAGE
+			<div class="center">figrid</div>
+  	</a>
+	-->
+	<h1>About Me</h1>
 </body>
 
 </html>
