--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Lato:200,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
-    <link href="pref.css" rel="stylesheet">
+    <link href="all.css" rel="stylesheet">
+	<link href="home.css" rel="stylesheet">
     <title>Calvin Osinga</title>
 </head>
   
