--- a/index.html
+++ b/index.html
@@ -2,54 +2,39 @@
 <html>
 
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Lato:200,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
-    <link href="all.css" rel="stylesheet">
+	
+    <link href="main.css" rel="stylesheet">
 	<link href="home.css" rel="stylesheet">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <title>Calvin Osinga</title>
 </head>
   
-<body>
+<body class="homepage is-preload">
+	<div id="page-wrapper">
 
-    <h1>Calvin Osinga</h1>
-    <h2>Ph. D. Student</h2>
-	<p>Hi! I'm currently a third-year graduate student at the
-		Astronomy Department at UMD.</p>
+		<!-- Header -->
+		<section id="header" class="wrapper">
+			<!-- Logo -->
+			<div id="logo">
+				<h1>Calvin Osinga</h1>
+				<p>Ph.D Student</p>
+			</div>
+
+			<!-- Navigation Bar at Top -->
+			<nav id="nav">
+				<ul>
+					<li class="current"><a href="index.html">Home</a></li>
+					<li><a href="research/page.html">Research</a></li>
+					<li><a href="software/page.html">Software</a></li>
+					<li><a href="bio/page.html">About Me</a></li>
+				</ul>
+			</nav>
+		</section>
+	</div>
+   
 	
-	<h1>Research</h1>
-	<a href="research/page.html">
-		<div class="container">
-			<img src="colorcompare.png" alt="Clustering in Simulation" opacity=0.5>
-			<div class="center">Preparing to Map the Structure of the Universe</div>
-		</div>
-	</a>
-	
-	<h1>Code</h1>
-	<!--
-	<a href="code/page.html">
-		<div class="container">
-			GET IMAGE
-			<div class="center">figrid</div>
-  	</a>
-	-->
-	<h1>About Me</h1>
 </body>
 
 </html>
 
-<!--    
-TOPNAV REMOVED
-<div class="topnav">
-    	<a class="active" href="index.html">Home</a>
-		<div class="dropdown">
-			<button class="dropbtn">Research
-				<i class="fa fa-caret-down"></i>
-			</button>
-			<div class="dropdown-content">
-				<a href="research/interests/page.html">Interests</a>
-				<a href="research/papers/page.html">Papers</a>
-			</div>
-		</div>
-        <a href="code/page.html">Code</a>
-        <a href="about/page.html">About Me</a>
-    </div> -->
