--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	
     <link href="main.css" rel="stylesheet">
-	<link href="home.css" rel="stylesheet">
+	<!-- <link href="home.css" rel="stylesheet"> -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <title>Calvin Osinga</title>
