does the pdf show in the website

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<section id="intro" class="wrapper style1">
 				<div class="title">About Me</div>
 				<div class="container">
+					<img src="images/me.pdf">
 					<p class="style1">
 						I'm a graduate student at the University of Maryland - College Park
 						in the Astronomy Department. **Add picture to the left** <br><br>
@@ -129,7 +130,7 @@
 									Subhalo and PARticle Trajectory Analysis
 								</p>
 								<ul class="actions">
-									<li><a href="software/sparta/page.html" class="button style1">Learn More</a></li>
+									<li><a href="software/sparta/page.html" class="button style2">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
@@ -141,7 +142,7 @@
 									Plotting software.
 								</p>
 								<ul class="actions">
-									<li><a href="software/figrid/page.html" class="button style1">Learn More</a></li>
+									<li><a href="software/figrid/page.html" class="button style2">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
@@ -153,7 +154,7 @@
 
 								</p>
 								<ul class="actions">
-									<li><a href="software/ulula/page.html" class="button style1">Learn More</a></li>
+									<li><a href="software/ulula/page.html" class="button style2">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
@@ -165,7 +166,7 @@
 
 								</p>
 								<ul class="actions">
-									<li><a href="software/pkfire/page.html" class="button style1">Learn More</a></li>
+									<li><a href="software/pkfire/page.html" class="button style2">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
