ok a picture has been added

--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
 
 				</section>
 
-
-		
+				
 			<!-- Intro -->
 			<section id="intro" class="wrapper style1">
 				<div class="title">About Me</div>
 				<div class="container">
-					<img src="images/me.pdf">
-					<p class="style1">
-						I'm a graduate student at the University of Maryland - College Park
-						in the Astronomy Department. **Add picture to the left** <br><br>
-
-						This page serves as a repository for data and supplementary analyses
-						that may not be included in the papers themselves. <br><br>
-					</p>
+					<div class="image-txt-container">
+						<img src="images/bio_pic.jpg" style="width: 50%;">
+						<p class="style1">
+							I'm a graduate student at the University of Maryland - College Park
+							in the Astronomy Department. **Add picture to the left** <br><br>
+	
+							This page serves as a repository for data and supplementary analyses
+							that may not be included in the papers themselves. <br><br>
+						</p>
+					</div>
 
 					<ul class="actions">
 						<li><a href="bio/page.html" class="button style3 large">See More</a></li>
