--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
 				</section>
 
 
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1">
+			<div class="title">About This Page</div>
+			<div class="container">
+				<div class="image-txt-container">
+					<img src="images/bio_pic.jpg" style="width: 50%;">
+					<p class="style1">
+						I'm a graduate student at the University of Maryland - College Park
+						in the Astronomy Department. <br><br>
 
+						This page serves as a repository for data and supplementary analyses
+						that may not be included in the papers themselves. <br><br>
+					</p>
+				</div>
+
+				<ul class="actions">
+					<li><a href="bio/page.html" class="button style3 large">See More</a></li>
+				</ul>
+			</div>
+		</section>
 
 
 			<!-- Highlights -->
