modified the home page a bit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 
 <html>
+	<!--TODO: update the website header so the image is less pixelated-->
 	<head>
 		<title>Calvin Osinga</title>
 		<meta charset="utf-8" />
@@ -38,32 +39,36 @@
 				</section>
 
 
-		<!-- Intro -->
-		<section id="intro" class="wrapper style1">
-			<div class="title">About This Website</div>
-			<div class="container">
-				<div class="image-txt-container">
-					<img src="images/bio_pic.jpg" style="width: 50%;">
-					<p class="style1">
-						I'm a graduate student at the University of Maryland - College Park
-						in the Astronomy Department, working with Professor 
-						<a href="www.benediktdiemer.com">Benedikt Diemer</a>. <br><br>
+			<!-- Intro -->
+			<!--TODO: make the picture and text zoom together - the picture can keep getting smaller but the text does not-->
+			<section id="intro" class="wrapper style1">
+				<div class="title">About This Website</div>
+				<div class="container">
+					<div class="image-txt-container">
+						<img src="images/window.jpg" style="width: 50%;">
+						<p class="style1">
+							I'm a graduate student at the University of Maryland - College Park
+							in the Astronomy Department, working with Professor 
+							<a href="www.benediktdiemer.com">Benedikt Diemer</a>. <br><br>
 
-						The <u style="color:#606c38"><i><strong><span style="color:#606c38">research</span></strong></i></u>
-						section provides broad descriptions of my research interests within
-						astronomy. The last panel contains a list of papers that I've contributed
-						to and their corresponding supplementary materials. There, I have more thorough
-						explanations, additional analyses, and text files containing the data that created
-						the figures in the paper
-						
-					</p>
+							The <u style="color:#606c38"><i><strong><span style="color:#606c38">research</span></strong></i></u>
+							section provides broad descriptions of my research interests within
+							astronomy. There, as well as in the <a href="research/papers/page.html">published work</a> . There, I have more thorough
+							explanations, additional analyses, and text files containing the data that created
+							the figures in the paper. <br><br>
+							
+							<u style="color:#606c38"><i><strong><span style="color:#606c38">software</span></strong></i></u> 
+							<br><br>
+
+							To contact me, feel free to email me, twitter, instagram
+						</p>
+					</div>
+					<!-- TODO add CV here-->
+					<ul class="actions">
+						<li><a href="bio/page.html" class="button style3 large">About Me</a></li>
+					</ul>
 				</div>
-				<!-- TODO add CV here-->
-				<ul class="actions">
-					<li><a href="bio/page.html" class="button style3 large">About Me</a></li>
-				</ul>
-			</div>
-		</section>
+			</section>
 
 
 			<!-- Highlights -->
@@ -157,7 +162,7 @@
 								<a href="software/ulula/page.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3><a href="software/ulula/page.html" style="color:#e0ae68">Ulula</a></h3>
 								<p>
-
+									Easy and fast hydro code written in Python.
 								</p>
 								<ul class="actions">
 									<li><a href="software/ulula/page.html" class="button style2">Learn More</a></li>
@@ -169,7 +174,7 @@
 								<a href="software/pkfire/page.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3><a href="software/pkfire/page.html" style="color:#e0ae68">PKfire</a></h3>
 								<p>
-
+									Helps to make visualizations and animations for power spectra
 								</p>
 								<ul class="actions">
 									<li><a href="software/pkfire/page.html" class="button style2">Learn More</a></li>
@@ -181,7 +186,8 @@
 			</section>
 
 			<!-- Footer -->
-				<section id="footer" class="wrapper">
+			
+				<!--<section id="footer" class="wrapper">
 					<div class="title">Contact Me</div>
 					<div class="container">
 						<div class="row">
@@ -190,24 +196,14 @@
 							</div>
 							<div class="col-6 col-12-medium">
 
-								<!-- Contact -->
 									<section class="feature-list small">
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section>
-													<h3 class="icon solid fa-home">Mailing Address</h3>
+													<h3>Social</h3>
+													<img src="images/twitter_logo_transparent.png">
 													<p>
-														Untitled Corp<br />
-														1234 Somewhere Rd<br />
-														Nashville, TN 00000
-													</p>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-comment">Social</h3>
-													<p>
-														<a href="#">@untitled-corp</a><br />
+														<a href="#">@calvinosinga</a><br />
 														<a href="#">linkedin.com/untitled</a><br />
 														<a href="#">facebook.com/untitled</a>
 													</p>
@@ -215,17 +211,9 @@
 											</div>
 											<div class="col-6 col-12-small">
 												<section>
-													<h3 class="icon solid fa-envelope">Email</h3>
+													<h3>Email</h3>
 													<p>
 														<a href="#">info@untitled.tld</a>
-													</p>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-phone">Phone</h3>
-													<p>
-														(000) 555-0000
 													</p>
 												</section>
 											</div>
@@ -236,11 +224,11 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 		</div>
 
