--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="research/page.html">Research</a></li>
-								<li><a href="software/page.html">Software</a></li>
+								<li><a href="research/papers/papers_home.html">Publications</a></li>
+								<!-- <li><a href="software/page.html">Software</a></li> -->
 								<li><a href="bio/page.html">About Me</a></li>
 							</ul>
 						</nav>
@@ -42,7 +42,7 @@
 			<!-- Intro -->
 			<!--TODO: make the picture and text zoom together - the picture can keep getting smaller but the text does not-->
 			<section id="intro" class="wrapper style1">
-				<div class="title">About This Website</div>
+				<div class="title">About Me</div>
 				<div class="container">
 					<div class="image-txt-container">
 						<img src="images/window.jpg" style="width: 50%;">
@@ -128,7 +128,7 @@
 				</section>
 			
 			
-			<!-- Highlights -->
+			<!-- Highlights
 			<section id="highlights" class="wrapper style2">
 				<div class="title">Software</div>
 				<div class="container">
@@ -183,7 +183,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- Footer -->
 			
