making sup figures

--- a/hicolor/sup_analysis/sup_analysis.html
+++ b/hicolor/sup_analysis/sup_analysis.html
@@ -33,15 +33,24 @@
 				<!-- Main -->
 				<div id="main">
 					<article class="thumb">
-						<a href="rb_vs_sf/gr-uvj_hist.png" class="image"><img src="rb_vs_sf/gr-uvj_hist.png" alt="" /></a>
-						<h2>Comparing color to star formation activity</h2>
+						<a href="z=2_gr.png" class="image"><img src="z=2_gr.png" alt="" /></a>
+						<h2>high redshift color distribution</h2>
 						<p>
-							A galaxy that qualifies as "red"
-							is not necessarily
-							always quiescent. <a href="rb_vs_sf/sf.html">
-							We examine how different the color
-							distribution is from the star-formation rate 
-							distribution here.</a>
+							...analysis...
+						</p>
+					</article>
+					<article class="thumb">
+						<a href="gr-uvj_hist.png" class="image"><img src="gr-uvj_hist.png" alt="" /></a>
+						<h2>Color versus star formation activity</h2>
+						<p>
+							...analysis...
+						</p>
+					</article>
+					<article class="thumb">
+						<a href="censat_gr_stmass.png" class="image"><img src="censat_gr_stmass.png" alt="" /></a>
+						<h2>Color of centrals and satellites</h2>
+						<p>
+							...analysis...
 						</p>
 					</article>
 					<article class="thumb">
@@ -59,7 +68,7 @@
 						</p>
 					</article>
 					<article class="thumb">
-						<a href="gal_auto_zevo.png" class="image"><img src="gal_auto_zevo.png" object-fit='contain' alt="" /></a>
+						<a href="gal_auto_zevo.png" class="image"><img src="gal_auto_zevo.png" alt="" /></a>
 						<h2>evolution of galaxy auto powers</h2>
 						<p>
 							The redshift evolution of the blue (left), red (center),
@@ -73,7 +82,13 @@
 							between galaxy color and HI, at least directly.
 						</p>
 					</article>
+					<article class="thumb">
+						<a href="axis_test_redshift_ratio.png" class="image"><img src="axis_test_redshift_ratio.png" alt="" /></a>
+						<h2>evolution of galaxy auto powers</h2>
+						<p>
 
+						</p>
+					</article>
 
 				</div>
 				<!-- Footer -->
