added more online figs

--- a/hicolor/sup_analysis/sup_analysis.html
+++ b/hicolor/sup_analysis/sup_analysis.html
@@ -33,61 +33,36 @@
 				<!-- Main -->
 				<div id="main">
 					<article class="thumb">
-						<a href="z=2_gr.png" class="image"><img src="z=2_gr.png" alt="" /></a>
+						<a href="images/z=2_gr_caption.png" class="image"><img src="images/z=2_gr.png" alt="" /></a>
 						<h2>high redshift color distribution</h2>
-						<p>
-							...analysis...
-						</p>
 					</article>
 					<article class="thumb">
-						<a href="gr-uvj_hist.png" class="image"><img src="gr-uvj_hist.png" alt="" /></a>
-						<h2>Color versus star formation activity</h2>
-						<p>
-							...analysis...
-						</p>
+						<a href="images/gr-uvj_hist_caption.png" class="image"><img src="images/gr-uvj_hist.png" alt="" /></a>
+						<h2>comparing color to star formation state</h2>
 					</article>
 					<article class="thumb">
-						<a href="censat_gr_stmass.png" class="image"><img src="censat_gr_stmass.png" alt="" /></a>
-						<h2>Color of centrals and satellites</h2>
-						<p>
-							...analysis...
-						</p>
+						<a href="images/censat_gr_caption.png" class="image"><img src="images/censat_gr_stmass.png" alt="" /></a>
+						<h2>Color evolution of centrals and satellites</h2>
 					</article>
 					<article class="thumb">
-						<a href="hi_auto_zevo.png" class="image"><img src="hi_auto_zevo.png" alt="" /></a>
-						<h2>evolution of HI auto power</h2>
-						<p>
-							The redshift evolution of the HI auto power spectrum, shown as a ratio over 
-							the z = 0 result. The contours are excluded for ease of reading.
-
-							The auto power increases between redshifts 1 and 0.5, but decreases
-							significantly between 0 and 0.5.
-
-							This highlights that quenching galaxies play a large role in the
-							evolution of structure in the HI distribution.
-						</p>
+						<a href="images/hi_zevo_caption.png" class="image"><img src="images/hi_auto_zevo.png" alt="" /></a>
+						<h2>time evolution of HI auto power spectrum</h2>
 					</article>
 					<article class="thumb">
-						<a href="gal_auto_zevo.png" class="image"><img src="gal_auto_zevo.png" alt="" /></a>
-						<h2>evolution of galaxy auto powers</h2>
-						<p>
-							The redshift evolution of the blue (left), red (center),
-							and all (right) galaxy auto powers. The galaxy
-							auto power increases with time, which is the
-							expected evolution for power spectra.
-
-							However, the both of the colored auto powers decrease with time
-							between the latter two snapshots. This is also seen in the
-							cross-powers, but this removes the influence of the relationship
-							between galaxy color and HI, at least directly.
-						</p>
+						<a href="images/gal_zevo_caption.png" class="image"><img src="images/gal_auto_zevo.png" alt="" /></a>
+						<h2>time evolution of galaxy auto power spectra</h2>
 					</article>
 					<article class="thumb">
-						<a href="axis_test_redshift_ratio.png" class="image"><img src="axis_test_redshift_ratio.png" alt="" /></a>
-						<h2>evolution of galaxy auto powers</h2>
-						<p>
-
-						</p>
+						<a href="images/alt_bias_caption.png" class="image"><img src="images/alt_bias.png" alt="" /></a>
+						<h2>comparing bias definitions</h2>
+					</article>
+					<article class="thumb">
+						<a href="images/axis_test_redshift_ratio_caption.png" class="image"><img src="images/axis_test_redshift_ratio.png" alt="" /></a>
+						<h2>redshift-space power spectra with velocities projected along alternate axes</h2>
+					</article>
+					<article class="thumb">
+						<a href="images/grid_res_caption.png" class="image"><img src="images/grid_res.png" alt="" /></a>
+						<h2>convergence of power spectra with grid resolution</h2>
 					</article>
 
 				</div>
