updating home page

--- a/index.html
+++ b/index.html
@@ -47,25 +47,18 @@
 				<div class="container">
 					<div class="image-txt-container">
 						<img src="images/window.jpg" style="width: 50%;">
-						<p class="style1">
+						<p class="style1" style="width: 50%; font-size: 1vi;">
 							I'm a third-year graduate student in the Astronomy Department 
 							at University of Maryland - College Park. I currently work
 							with Prof.
 							<a href="www.benediktdiemer.com">Benedikt Diemer</a>
 							researching a better framework to study dark matter 
-							in universe-scale simulations.<br><br>
+							in universe-scale simulations. I'm also interested in 21cm
+							intensity mapping and large-scale structure. Outside of research,
+							I'm particularly passionate about improving public
+							speaking and verbal communication skills in science.<br><br>
 
-							Before then, I attended the University of Wisconsin-Madison majoring
-							in astronomy, physics, and mathematics with a minor in computer science.
-							While there, I researched 
-							radio telescope instrumentation with Prof. 
-							<a href="https://cmb.physics.wisc.edu/"> Peter Timbie</a>
-							and large-scale structure in hydrodynamical simulations
-							with Prof. 
-							<a href="https://www.astro.wisc.edu/?uw_staff=donghia-elena">Elena D'Onghia</a>.
-							<br><br>
-
-							More details on my research adventures and ways to conatct me 
+							More details on my projects
 							are in the sections
 							below! If you want to get to know me a little better, I include some
 							personal interests and hobbies in the 
@@ -91,7 +84,10 @@
 									<a href="hicolor/hicolor.html" class="image featured"><img src="images/tng100_HI+blue+red_slice.jpeg" alt="" /></a>
 									<h3><a href="hicolor/hicolor.html">Hydrogen and Galaxies</a></h3>
 									<p>
-										Add description
+										Future experiments intend to use hydrogen to map the large-scale structure
+										of the universe and constrain the behavior of dark energy. We use computer
+										simulations to understand what how the processes within galaxies 
+										may complicate this future technique.
 									</p>
 									<ul class="actions">
 										<li><a href="hicolor/hicolor.html" class="button style1">Learn More</a></li>
@@ -103,7 +99,7 @@
 									<a href="orbit_infall/orbit_infall.html" class="image featured"><img src="images/orbit-infall.jpeg" alt="" /></a>
 									<h3><a href="orbit_infall/orbit_infall.html">Halo Boundaries</a></h3>
 									<p>
-										description here
+										Current definitions of halo boundaries often exclude satellites that clearly
 									</p>
 									<ul class="actions">
 										<li><a href="orbit_infall/orbit_infall.html" class="button style1">Learn More</a></li>
@@ -115,7 +111,7 @@
 									<a href="nonsph_halos/nonsph.html" class="image featured"><img src="images/nonsp_halo.jpeg" alt="" /></a>
 									<h3><a href="nonsph_halos/nonsph.html">Non-Spherical Halos</a></h3>
 									<p>
-										so much describing
+										
 									</p> 
 									<ul class="actions">
 										<li><a href="nonsph_halos/nonsph.html" class="button style1">Learn More</a></li>
