--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				<div class="title">About Me</div>
 				<div class="container">
 					<div class="image-txt-container">
-						<img src="images/window.jpg" style="width: 50%;">
-						<p class="style1" style="width: 50%; font-size: 1vi;">
-							I'm a third-year graduate student in the Astronomy Department 
-							at University of Maryland - College Park. I currently work
-							with Prof.
+						<img src="images/window.jpg" style="width: 30vw;">
+						<p class="style1" style="width: 50%; font-size: 1vb;">
+							I'm a third-year graduate student in the Astronomy 
+							Department at University of Maryland - College 
+							Park. I currently work with Prof.
 							<a href="www.benediktdiemer.com">Benedikt Diemer</a>
 							researching a better framework to study dark matter 
 							in universe-scale simulations. I'm also interested in 21cm
