trying with new sizing

--- a/hicolor/hicolor.html
+++ b/hicolor/hicolor.html
@@ -29,9 +29,7 @@
 			<div class="container">
 				<div class="image-txt-container">
                     <p class = "style1">
-                    why we want to map the universe
-                    but its hard. hydrogen offers a way.
-                    However, hydrogen faithful tracer.
+                    Dark energy is currently one of the biggest mysteries in physics.
 
                     <br><br>
                     </p>
