--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<div class="title">About Me</div>
 				<div class="container">
 					<div class="image-txt-container">
-						<img src="images/window.jpg" style="width: 30vw;">
-						<p class="style1" style="width: 50%; font-size: 1vb;">
+						<img src="images/window.jpg" style="width:30%;">
+						<p class="style1" style="width: 50%; font-size: 100%; overflow-y: scroll;">
 							I'm a third-year graduate student in the Astronomy 
 							Department at University of Maryland - College 
 							Park. I currently work with Prof.
@@ -168,10 +168,9 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section>
-													<h3>Social</h3>													<p>
-														<a href="#">@calvinosinga</a><br />
-														<a href="#">linkedin.com/untitled</a><br />
-														<a href="#">facebook.com/untitled</a>
+													<h3>Social</h3>	
+													<p>
+														Twitter: <a href="https://twitter.com/CalvinOsinga">@CalvinOsinga</a><br/>
 													</p>
 												</section>
 											</div>
@@ -179,7 +178,7 @@
 												<section>
 													<h3>Email</h3>
 													<p>
-														<a href="#">info@untitled.tld</a>
+														<a>cosinga@umd.edu</a>
 													</p>
 												</section>
 											</div>
