--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<div class="title">About Me</div>
 				<div class="container">
 					<div class="image-txt-container">
-						<img src="images/window.jpg" style="width:30%;">
-						<p class="style1" style="width: 50%; font-size: 100%; overflow-y: scroll;">
+						<img src="images/window.jpg" style="width:30%; object-fit: contain;">
+						<p class="style1" style="width: 65%; font-size: 100%; overflow-y: scroll; max-height: 25em;">
 							I'm a third-year graduate student in the Astronomy 
 							Department at University of Maryland - College 
 							Park. I currently work with Prof.
