--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 			<!-- Header -->
 				<section id="header" class="wrapper">
-
+					<!-- TODO: adjust to a single image for mobile users-->
+					<video id="background-video" autoplay loop muted poster="images/poster.png">
+						<source src="images/benedikt_web_vis.mp4" type="video/mp4">
+					</video>
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Calvin Osinga</a></h1>
+							<h1>Calvin Osinga</h1>
 							<p>Ph.D. Student</p>
 						</div>
 
@@ -233,6 +236,7 @@
 						<div id="copyright">
 							<ul>
 								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Video: <a href="www.benediktdiemer.com/visualization/movies/">Diemer & Mansfield</a></li>
 							</ul>
 						</div>
 					</div>
