shortened the video

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							I'm also interested in 21cm
 							intensity mapping and large-scale structure, having worked with
 							Professors <a href="https://cmb.physics.wisc.edu/">Peter Timbie</a>
-							and <a href="https://www.astro.wisc.edu/?uw_staff=donghia-elena">Elena D'Onghia</a>
+							and <a href="https://www.madastrodynamics.com/research">Elena D'Onghia</a>
 							in undergrad on those topics. Outside of research,
 							I'm particularly passionate about improving public
 							speaking and verbal communication skills in science.<br><br>
