--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="hicolor/hicolor.html">Hydrogen and Galaxies</a></li>
-								<li><a href="orbit_infall/orbit_infall.html">Dynamic Satellites</a></li>
-								<li><a href="nonsph_halos/nonsph.html">Non-spherical Halos</a></li>
+								<li><a href="hicolor/hicolor.html">Mapping the Universe</a></li>
+								<li><a href="orbit_infall/orbit_infall.html">Galaxy Evolution</a></li>
+								<li><a href="nonsph_halos/nonsph.html">Dark Matter</a></li>
 								<li><a href="bio/page.html">About Me</a></li>
 							</ul>
 						</nav>
