--- a/dm/dm.html
+++ b/dm/dm.html
@@ -19,15 +19,19 @@
 
 			<!-- Logo -->
 				<div id="logo" style="top:-25%">
-					<h1 style="font-size:xx-large;">building a map of the universe</a></h1>
+					<h1 style="font-size:xx-large;">dark matter</a></h1>
 				</div>
 		</section>
 
 
 		<section id="highlights" class="wrapper style3">
-			<div class="title">Discovery</div>
+			<div class="title">Halos</div>
 			<div class="container">
 				<div class="image-txt-container">
+                    How dark matter was discovered, what halos are.
+                    Unknown what it is at this point.
+                    hierarchical structure formation, halos are building blocks.
+                    Conventionally defined as approximate spheres.
 
                     
 				</div>
@@ -36,14 +40,14 @@
 
         <!-- Intro -->
 		<section id="intro" class="wrapper style1">
-			<div class="title">Halos</div>
+			<div class="title">Dynamics</div>
 			<div class="container">
 				<div class="image-txt-container">
-					<iframe width="853" height="480" src="https://www.youtube.com/embed/jpXuYc-wzk4" title="Sound waves in space: Baryon Acoustic Oscillations" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					<p class="style1">
-                        
-
-					</p>
+                    However, this may not be the right way to think about it.
+                    Orbiting/Infalling classification, not previously tractable
+                    information since it required too many time steps.
+                    Ties halos to more physical definitions rather than
+                    spheres that meet some density requirement.
 				</div>
 			</div>
 		</section>
