--- a/galfe/galfe.html
+++ b/galfe/galfe.html
@@ -1,1 +1,63 @@
-page under construction :)
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title>Galaxy Evolution</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
+</head>
+
+<body class="homepage is-preload">
+	<div id="page-wrapper">
+		<!-- Header -->
+		<section id="header" class="wrapper" 
+			style="background: url(cosmic_web.jpg); 
+			background-position: 50% 65%; 
+			background-size: cover">
+
+			<!-- Logo -->
+				<div id="logo" style="top:-25%">
+					<h1 style="font-size:xx-large;">Galaxy Evolution</a></h1>
+				</div>
+		</section>
+
+
+		<section id="highlights" class="wrapper style3">
+			<div class="title">Occupation</div>
+			<div class="container">
+				<div class="image-txt-container">
+                    Dark matter forms halos. Other matter follows
+                    the dark matter and collapses inside their halos, forming galaxies.
+                    Properties of halos and galaxies are linked, assembly bias.
+                    Plays a role in how galaxies are linked
+
+                    
+				</div>
+			</div>
+		</section>
+
+        <!-- Intro -->
+		<section id="intro" class="wrapper style1">
+			<div class="title">Star-Formation</div>
+			<div class="container">
+				<div class="image-txt-container">
+                    Forming stars is a important part of galaxies life.
+                    Requires gas, exhausts gas. Leaves red stars, "passive"
+                    end of life. Study the distribution of hydrogen, 
+                    an ingredient in star formation.
+
+				</div>
+			</div>
+		</section>
+		<section id="footer" class="wrapper">
+			<div class="title">Publications</div>
+			
+				
+
+
+			</div>
+		</section>
+	</div>
+</body>
