--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
 				<div class="title">About Me</div>
 				<div class="container">
 					<div class="image-txt-container">
-						<img src="images/window.jpg" style="width:30%; object-fit: contain;">
-						<p class="style1" style="width: 65%; font-size: 100%; overflow-y: scroll; max-height: 30em;">
+						<a class="image left" style="width: 200%;">
+							<img src="images/window.jpg" style="object-fit: contain;">
+						</a>
+						<!-- <img src="images/window.jpg" style="width:30%; object-fit: contain;"> -->
+						<!-- <p class="style1" style="width: 65%; font-size: 100%; overflow-y: scroll; max-height: 30em;"> -->
+						<p class="style1" style="font-size: 100%;">
 							I'm a PhD candidate in the Astronomy 
 							Department at University of Maryland - College 
 							Park. Broadly, my research seeks to answer 
@@ -99,7 +103,7 @@
 										The mysterious force that drives the accelerating expansion
 										of the Universe known as dark energy remains outside our
 										current understanding of physics. Maps of
-										the universe allows us to track and understand dark energy's behavior,
+										the universe allows us to track dark energy's behavior,
 										bringing us closer to solving this puzzle. 
 									</p>
 									<ul class="actions">
@@ -114,12 +118,12 @@
 									</a>
 									<h3><a href="dm/dm.html">Dark Matter</a></h3>
 									<p>
-										Structures called "dark matter halos" 
-										are the Universe's building blocks.
-										Cosmologists used them to 
-										construct theoretical frameworks for
-										how the Cosmic Web formed and developed
-										and to measure dark matter's properties.
+										Dark matter, as it collapses under its own
+										gravity, collects into approximately spherical 
+										structures we call "halos". These halos are
+										the building blocks for our Universe, and 
+										serve as the foundation for many cosmological
+										theories.
 										
 
 									</p>
@@ -133,10 +137,12 @@
 									<a href="galfe/galfe.html" class="image featured"><img src="images/gal_dm_halo.jpeg" alt="" /></a>
 									<h3><a href="galfe/galfe.html">Galaxy Evolution</a></h3>
 									<p>
-										As dark matter collapses into halos, it guides 
-										the formation and evolution of embedded galaxies. As
+										Dark matter halos guide 
+										the formation and evolution of galaxies embedded within them. As
 										a result, the properties of galaxies and their 
-										host dark matter halos are inextricably tied.
+										host dark matter halos are inextricably tied. This link allows
+										us to infer properties about the halos from the galaxies inhabiting
+										them.
 
 									</p>
 									<ul class="actions">
