--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1>Calvin Osinga</h1>
-							<p>Ph.D. Candidate</p>
+							<p>Astronomy<br>Ph.D. Candidate</p>
 						</div>
 						<p style="text-align: right; opacity: 0.5; font-size: smaller; position: absolute; bottom: 0%; right: 1%;">
 							Philip Mansfield & Benedikt Diemer
