--- a/topics/dm/dm.html
+++ b/topics/dm/dm.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 		<section id="header" class="wrapper">
 			<video id="background-video" autoplay loop muted poster="dm_lss_image.jpg">
-				<source src="movie6_br08.0_fps25.mp4" type="video/mp4">
+				<source src="clipped_lss.mp4" type="video/mp4">
 			</video>
 			<!-- Logo -->
 			<div id="logo">
