new fig in sup, and then added google tracking stuff

--- a/papers/higal_cross/sup_analysis.html
+++ b/papers/higal_cross/sup_analysis.html
@@ -9,6 +9,17 @@
 -->
 <html>
 	<head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y7HXLGT7Y9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y7HXLGT7Y9');
+</script>
+
 		<title>True Colors of Hydrogen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -63,7 +74,11 @@
 						<a href="images/HIxCol_caption.png" class="image"><img src="images/HIxCol_stbinth_censat.png" alt="" /></a>
 						<h2>central/satellite contributions to cross-powers</h2>
 					</article>
-
+					
+					<article class="thumb">
+						<a href="images/blue_cen_hmf_stmf.png" class="image"><img src="images/blue_cen_hmf_stmf_no.png" alt=""/></a>
+						<h2>halo occupation of blue centrals</h2>
+					</article>
 
 				</div>
 				<!-- Footer -->
