--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</video>
 
 			<!-- Background for Mobile: Image -->
-			<img id="background-image" src="images/poster.png" alt="Cosmic Web Visualization" />
+			<img id="background-image" src="images/cosmic_web_bg_img.png" alt="Cosmic Web Visualization" />
 
 					<!-- Logo -->
 						<div id="logo">
