added MNRAS link

--- a/index.html
+++ b/index.html
@@ -291,10 +291,9 @@
 									[<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231016884O/abstract">
 										ads
 									</a>]
-									<!--
-									[<a href="LINK TO JOURNAL">
-										JOURNAL NAME
-									</a>] -->
+									[<a href="https://academic.oup.com/mnras/article/531/1/450/7659377">
+										MNRAS
+									</a>]
 									[<a href="papers/higal_cross/sup_analysis.html">
 										Supplementary Materials
 									</a>]
